# reclaim-eval

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTE_parser_fix.md  NOTICE  README.md  pyproject.toml  requirements.txt
annotation/: README.md  annotation_form_filled.txt  annotator_template.csv  extract_pdf.py  form.tex  key.csv  rater2.csv  score_kappa.py  score_multi.py
demo/: brittle_battleship.html
scripts/: analyze_battleship.py  analyze_certificate.py  analyze_noisysweep.py  analyze_realworld.py  analyze_sizesweep.py  auto_vs_summary_ci.py  bench_adversarial.py  bench_battleship.py  bench_battleship_behavior.py  bench_blank.py  bench_cascade.py  bench_chancefloor.py  bench_claude.py  bench_completeness.py  bench_confidentwrong.py  bench_corrtax.py  bench_endogenous.py  bench_falsecorrection.py  bench_locating.py  bench_multiwoz.py  bench_multiwoz_failmode.py  bench_noisysweep.py  bench_policies.py  bench_prevalence.py  bench_promptsweep.py  bench_realworld.py  bench_sizesweep.py  bench_srcconcl.py  confab_audit.py  frontier_table_ci.py  integrity_table_ci.py  label_prevalence.py  logic_failmode.py  make_invertedu.py  prevalence_floor.py  probe_models.py  reproduce_tables.py  run_expand.sh  run_expand2.sh  run_pilot.py  (+2 more)
tau_reclaim/: .gitignore  README.md  aggregate.py  aggregate_forced.py  cases.py  clients.py  memory.py  results_forced_commit_gemini35flash.jsonl  results_forced_commit_gpt54.jsonl  results_forced_commit_grok43.jsonl  results_forced_commit_opus48.jsonl  results_forced_gemini35flash.jsonl  results_forced_gpt54.jsonl  results_gpt54.jsonl  (+17 more)
(+118 files in other folders)
